Fix reversed container wrap

--- a/defaults/grid.less
+++ b/defaults/grid.less
@@ -52,7 +52,7 @@
   }
 
   &.rev {
-    flex-flow: row-reverse;
+    flex-flow: row-reverse wrap;
 
     .g1,
     .g2,
